# bevy_ui

./: .gitignore  Cargo.toml  README.md
assets/: uixml_effect_material.wgsl  uixml_test_menu.css  uixml_test_menu.xml
docs/adr/: README.md  asset-loading.md  css-feature-parity.md  events-and-values.md  focus-source.md  game-css-tokens-states-transitions.md  render-effects.md  state-cascade.md  text-input.md  widget-form-metadata.md
examples/: basic.rs
src/: assets.rs  builder.rs  effect_material.rs  lib.rs  parser.rs  render_effects.rs  runtime.rs  selector.rs  style.rs
